# licensetest

./: LICENSE  README.md  pyproject.toml  wheel.json
src/test_pkg/: __version__.py
src/test_proprietary.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
